# Jianying-notification

./: .dockerignore  .env.example  .env.prod  .gitignore  .ruff.toml  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  example_usage.py  init_db.py  pyproject.toml  requirements.txt  start.sh  start_worker.bat  start_worker.sh  test_imports.py
.github/workflows/: aws-ecr-publish.yml  docker-publish.yml
app/: __init__.py  celery_app.py  config.py
app/api/: __init__.py  video_api_client.py
app/auth/: __init__.py  cognito_auth.py
app/db/: __init__.py  session.py
app/models/: __init__.py  video_render.py
app/tasks/: __init__.py  video_tasks.py  worker_status.py
tests/: __init__.py  manual_test_video_api_client.py  test_video_api_client.py
workflows/: docker-publish.yml
