[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jianying-notification"
version = "0.2.0"
description = "A message queue notification Python project using Celery workers to handle video render status updates"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "BlueFocusContentUniverse"}
]
dependencies = [
    "celery==5.5.3",
    "redis==7.1.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["app"]
